[project]
name = "cobra_lidar_api"
version = "6.3.0"
description = "Lumotive Lidar API and UI"

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    'flask == 2.1.1',
    'flask-cors == 3.0.10',
    'flask-httpauth == 4.4.0',
    'flask-restful == 0.3.9',
    'gunicorn == 20.1.0',
    'marshmallow == 3.15.0',
    'pyro5 == 5.12',
    'pyzipper == 0.3.5',
    'typing-extensions == 3.10.0.0',
    'werkzeug==2.1.1',
]

[project.optional-dependencies]
test = [
    "pytest == 7.1.1",
    "pytest-flask == 1.3.0",
    "pytest-repeat == 0.9.3",
    "cobra_system_control @ git+ssh://git@bitbucket.org/lumotive/cobra_system_control.git@develop",
    "requests == 2.27.1"
]

devops = [
    "pylint == 3.0.3"
]


[build-system]
requires = [
    "setuptools>=58.3.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['cobra_lidar_api*']

[tool.setuptools.package-data]
"*" = ["*.py", "*.service", "*.conf"]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "ch", "en", "id"]

[tool.pylint.messages_control]
max-line-length = 88

disable = ["missing-module-docstring",
           "missing-class-docstring",
           "missing-function-docstring",
           "broad-exception-raised",
           "broad-exception-caught",
           "R",
           "C",
           ]
