[project]
name = "cobra_system_control"
version = "6.3.0"
description = "Cobra system control and related utilities"

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "bitstring == 3.1.9",
    "numpy == 1.22.3",
    "pandas == 1.4.2",
    "peewee == 3.14.4",
    "Pyro5 == 5.12",
    "pyyaml == 6.0",
]

[project.optional-dependencies]
dev = [
    "sshtunnel",
    "intelhex",
]
devops = [
    "pylint == 3.0.3",
    "pytest-json-report == 1.5.0"
]
test = [
    "parameterized == 0.7.0",
    "pytest == 7.1.1",
    "pytest-random-order == 1.1.0",
    "intelhex",
]



[build-system]
requires = [
    "setuptools>=58.3.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['cobra_system_control*']

[tool.setuptools.package-data]
"*" = ["*.mcs", "*.bin", "*.sh", "*.service", "*.py", "*.yml", "*.so", "*.cpp"]


[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "ch", "en", "id"]

[tool.pylint.messages_control]
max-line-length = 88

disable = ["missing-function-docstring",
           "R",
           "C",
           ]
