# @file CMakeLists.txt
# @copyright Copyright (C) 2023 Lumotive, Inc. All rights reserved.

add_executable(frontend SensorHeadThread.cpp V4LSensorHeadThread.cpp MockSensorHeadThread.cpp main.cpp TimeSync.cpp)
add_executable(fectrl fectrl.cpp)
add_executable(mddump mddump.cpp)
add_executable(latency_test latency_test.cpp)
target_include_directories(frontend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(frontend pthread rawtodepth netpipeline lumoutil "$<IF:$<BOOL:${OpenCL_FOUND}>,${OpenCL_LIBRARIES},>")
target_link_libraries(fectrl lumoutil)
target_link_libraries(mddump rawtodepth lumoutil)
target_link_libraries(latency_test lumoutil pthread)
set_target_properties(mddump PROPERTIES COMPILE_FLAGS "-DDEFINE_LOG_TO_CONSOLE=ON")
install(TARGETS frontend RUNTIME DESTINATION /usr/sbin)
install(TARGETS fectrl RUNTIME DESTINATION /usr/bin)
install(TARGETS mddump RUNTIME DESTINATION /usr/bin)
install(FILES frontend.service DESTINATION /lib/systemd/system)
install(FILES ptp4l.service DESTINATION /lib/systemd/system)
install(FILES phc2sys.service DESTINATION /lib/systemd/system)
install(FILES run_frontend PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE DESTINATION /usr/sbin)
install(FILES run_ptp4l PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE DESTINATION /usr/sbin)
install(FILES tsync_status PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE DESTINATION /usr/sbin)
install(FILES tsync.conf DESTINATION /home/root/cobra)
install(FILES ntp.conf DESTINATION /home/root/cobra)
